--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,28 @@ language: cpp
 compiler:
   - gcc
   - clang
-script: ./configure.py --bootstrap && ./ninja all && ./ninja_test --gtest_filter=-SubprocessTest.SetWithLots && ./misc/ninja_syntax_test.py
+script:
+  - |
+    set -x
+    mkdir build-make
+    pushd build-make
+    cmake \
+        -DCMAKE_BUILD_TYPE=Release \
+        -DCMAKE_CXX_COMPILER=${CXX} \
+        -DCMAKE_C_COMPILER=${CC} \
+        -DCMAKE_VERBOSE_MAKEFILE=ON \
+        ..
+    cmake --build . -- ninja
+    export NINJA=$PWD/ninja
+    popd
+    mkdir build-ninja
+    pushd build-ninja
+    cmake \
+        -GNinja \
+        -DCMAKE_BUILD_TYPE=Release \
+        -DCMAKE_CXX_COMPILER=${CXX} \
+        -DCMAKE_C_COMPILER=${CC} \
+        -DCMAKE_MAKE_PROGRAM=${NINJA} ..
+    cmake --build . -- -v ninja
+    popd
+    sha1sum build-{make,ninja}/{ninja,libninja.a}
