add tests to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_policy(SET CMP0063 NEW)
 
 project(majak LANGUAGES C CXX)
 
+enable_testing()
+
 include(CheckSymbolExists)
 
 set(
@@ -134,7 +136,7 @@ endif()
 add_library(libninja STATIC ${ninja_sources})
 set_property(TARGET libninja PROPERTY PREFIX "")
 set_property(TARGET libninja PROPERTY CXX_VISIBILITY_PRESET hidden)
-target_compile_options(libninja PUBLIC ${ninja_compile_options})    
+target_compile_options(libninja PUBLIC ${ninja_compile_options})
 target_compile_definitions(
     libninja
     PUBLIC ${ninja_compile_definitions}
@@ -143,3 +145,54 @@ target_compile_definitions(
 
 add_executable(ninja src/ninja.cc)
 target_link_libraries(ninja libninja)
+
+set(
+    ninja_test_sources
+
+    src/build_log_test.cc
+    src/build_test.cc
+    src/clean_test.cc
+    src/clparser_test.cc
+    src/depfile_parser_test.cc
+    src/deps_log_test.cc
+    src/disk_interface_test.cc
+    src/edit_distance_test.cc
+    src/graph_test.cc
+    src/lexer_test.cc
+    src/manifest_parser_test.cc
+    src/ninja_test.cc
+    src/state_test.cc
+    src/string_piece_util_test.cc
+    src/subprocess_test.cc
+    src/test.cc
+    src/util_test.cc
+)
+
+if (WIN32)
+    list(APPEND
+        ninja_test_sources
+
+        src/includes_normalize_test.cc
+        src/msvc_helper_test.cc
+    )
+endif()
+
+add_executable(ninja_test ${ninja_test_sources})
+target_link_libraries(ninja_test libninja)
+add_test(NAME ninja_test COMMAND ninja_test)
+
+set(
+    ninja_perftests
+
+    build_log_perftest
+    canon_perftest
+    depfile_parser_perftest
+    hash_collision_bench
+    manifest_parser_perftest
+    clparser_perftest
+)
+
+foreach(perftest_name IN LISTS ninja_perftests)
+    add_executable(${perftest_name} src/${perftest_name}.cc)
+    target_link_libraries(${perftest_name} libninja)
+endforeach()
