--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
         -DCMAKE_CXX_COMPILER=${CXX} \
         -DCMAKE_C_COMPILER=${CC} \
         -DCMAKE_MAKE_PROGRAM=${NINJA} ..
-    cmake --build . -- -v ninja
+    cmake --build . -- -v
     ctest
     popd
     sha1sum build-{make,ninja}/{ninja,libninja.a}
