--- a/.travis.yml
+++ b/.travis.yml
@@ -7,29 +7,4 @@ compiler:
   - gcc
   - clang
 script:
-  - |
-    set -ex
-    mkdir build-make
-    pushd build-make
-    cmake \
-        -DCMAKE_BUILD_TYPE=Release \
-        -DCMAKE_CXX_COMPILER=${CXX} \
-        -DCMAKE_C_COMPILER=${CC} \
-        -DCMAKE_VERBOSE_MAKEFILE=ON \
-        ..
-    cmake --build . -- ninja
-    export NINJA=$PWD/ninja
-    popd
-    mkdir build-ninja
-    pushd build-ninja
-    cmake \
-        -GNinja \
-        -DCMAKE_BUILD_TYPE=Release \
-        -DCMAKE_CXX_COMPILER=${CXX} \
-        -DCMAKE_C_COMPILER=${CC} \
-        -DCMAKE_MAKE_PROGRAM=${NINJA} ..
-    cmake --build . -- -v
-    ctest
-    popd
-    sha1sum build-{make,ninja}/{ninja,libninja.a}
-    set +ex
+  - ./.travis/build.sh
