--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,13 +2,6 @@ version: 1.0.{build}
 image: Visual Studio 2017
 build_script:
 - cmd: >-
-    call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
+    call .appveyor\build.bat
 
-    python configure.py --bootstrap
-
-    ninja.bootstrap.exe all
-
-    ninja_test
-
-    python misc/ninja_syntax_test.py
 test: off
