fallback to python 2 if python 3 cannot be found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ project(majak LANGUAGES C CXX)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 find_package(RE2C)
 find_package(PythonInterp 3)
+if (NOT PYTHONINTERP_FOUND)
+    find_package(PythonInterp 2)
+endif()
 find_package(Doxygen OPTIONAL_COMPONENTS dot)
 find_program(NINJA_ASCIIDOC_EXECUTABLE asciidoc)
 find_program(NINJA_XSLTPROC_EXECUTABLE xsltproc)
