browse doesn't work on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 find_package(RE2C)
 find_package(PythonInterp 3)
 if (NOT PYTHONINTERP_FOUND)
-    find_package(PythonInterp 2)
+    find_package(PythonInterp 2.7)
 endif()
 find_package(Doxygen OPTIONAL_COMPONENTS dot)
 find_program(NINJA_ASCIIDOC_EXECUTABLE asciidoc)
@@ -202,7 +202,7 @@ if (WIN32)
     )
 endif()
 
-if (PYTHONINTERP_FOUND)
+if (PYTHONINTERP_FOUND AND NOT WIN32)
     set(NINJA_PYTHON "${PYTHON_EXECUTABLE}")
     set(NINJA_HAVE_BROWSE TRUE)
     list(APPEND ninja_sources src/browse.cc)
