--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,5 +3,14 @@ image: Visual Studio 2017
 build_script:
 - cmd: >-
     call .appveyor\build.bat
+clone_script:
+- cmd: >-
+    git clone -q --branch=%APPVEYOR_REPO_BRANCH% https://github.com/%APPVEYOR_REPO_NAME%.git %APPVEYOR_BUILD_FOLDER%
+
+    cd %APPVEYOR_BUILD_FOLDER%
+
+    git checkout -qf %APPVEYOR_REPO_COMMIT%
+
+    git submodule update --init --recursive
 
 test: off
