add benchmark module

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = ext/gtest
 	url = https://github.com/google/googletest.git
 	shallow = true
+[submodule "ext/benchmark"]
+	path = ext/benchmark
+	url = https://github.com/google/benchmark.git
